test/files/pos/bug439.scala
object test {
  abstract class Foo;
  object o extends Foo
}
