test/files/neg/bug143.scala
abstract class Foo {
  type Inner;
  type Alias = Inner;
}

class Bar extends Foo {
  override type Inner = Alias;
}
